--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "jss-rtl": "^0.2.3",
     "lodash": "^4.17.15",
     "material-ui-icons": "^1.0.0-beta.36",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
@@ -18,7 +18,7 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "react-scripts": "3.1.0"
+    "react-scripts": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
